test/corpus/basics.txt
===============================================
Let binding with lambda — simple function
===============================================

export let add = fn (a: i64, b: i64) -> i64 do
  return a + b
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list
        (param name: (identifier) type: (primitive_type))
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type)
      body: (return_stmt
        value: (binary_expr
          left: (variable name: (identifier))
          right: (variable name: (identifier)))))))

===============================================
Function with throws
===============================================

let main = fn () -> unit throws { IO } do
  return ()
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      throws: (row_type (type_identifier))
      body: (return_stmt value: (literal (unit_literal))))))

===============================================
Let statement
===============================================

let f = fn () -> i64 do
  let x: i64 = 42
  return x
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (let_stmt
        name: (identifier)
        type: (primitive_type)
        value: (literal (integer_literal)))
      body: (return_stmt
        value: (variable name: (identifier))))))

===============================================
String literal [=[ ... ]=]
===============================================

let greet = fn () -> unit throws { IO } do
  let msg = [=[ hello world ]=]
  print(val: msg)
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      throws: (row_type (type_identifier))
      body: (let_stmt
        name: (identifier)
        value: (literal (string_literal)))
      body: (expr_stmt
        (call_expr
          func: (dotted_identifier (identifier))
          args: (labeled_arg
            label: (identifier)
            value: (variable name: (identifier))))))))

===============================================
Import definition
===============================================

import * as math from "nxlib/math.nx"

-----------------------------------------------

(source_file
  (import_def
    alias: (identifier)
    path: (import_path (string_literal))))

===============================================
Sum type definition
===============================================

type Shape = Circle(radius: float) | Rect(w: float, h: float) | Point

-----------------------------------------------

(source_file
  (type_def
    name: (uident)
    body: (type_sum_def
      (variant_def
        name: (uident)
        (variant_field label: (identifier) type: (primitive_type)))
      (variant_def
        name: (uident)
        (variant_field label: (identifier) type: (primitive_type))
        (variant_field label: (identifier) type: (primitive_type)))
      (variant_def name: (uident)))))

===============================================
Record type definition
===============================================

type Point = { x: float, y: float }

-----------------------------------------------

(source_file
  (type_def
    name: (uident)
    body: (record_type
      (record_type_field name: (identifier) type: (primitive_type))
      (record_type_field name: (identifier) type: (primitive_type)))))

===============================================
Exception definition
===============================================

exception NotFound(msg: string)

-----------------------------------------------

(source_file
  (exception_def
    name: (uident)
    (variant_field label: (identifier) type: (primitive_type))))

===============================================
Match expression with constructor patterns
===============================================

let describe = fn (s: Shape) -> unit do
  match s do
    | Circle(r) ->
      return ()
    | Rect(w, h) ->
      return ()
    | _ ->
      return ()
  end
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list
        (param name: (identifier) type: (type_identifier)))
      ret_type: (primitive_type)
      body: (match_stmt
        target: (variable name: (identifier))
        (match_case
          pattern: (constructor_pattern
            name: (uident)
            (ctor_pat_arg
              pattern: (variable_pattern name: (identifier))))
          body: (return_stmt value: (literal (unit_literal))))
        (match_case
          pattern: (constructor_pattern
            name: (uident)
            (ctor_pat_arg
              pattern: (variable_pattern name: (identifier)))
            (ctor_pat_arg
              pattern: (variable_pattern name: (identifier))))
          body: (return_stmt value: (literal (unit_literal))))
        (match_case
          pattern: (wildcard_pattern)
          body: (return_stmt value: (literal (unit_literal))))))))

===============================================
If statement
===============================================

let abs = fn (x: i64) -> i64 do
  if x < 0 then
    return -1
  else
    return x
  end
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type)
      body: (if_stmt
        cond: (binary_expr
          left: (variable name: (identifier))
          right: (literal (integer_literal)))
        then_branch: (return_stmt value: (literal (integer_literal)))
        else_branch: (return_stmt value: (variable name: (identifier)))))))

===============================================
External function binding
===============================================

export external add_ints = [=[add]=] : (a: i64, b: i64) -> i64

-----------------------------------------------

(source_file
  (external_def
    name: (identifier)
    wasm_name: (string_literal)
    type: (arrow_type
      param_label: (identifier)
      param_type: (primitive_type)
      param_label: (identifier)
      param_type: (primitive_type)
      ret: (primitive_type))))

===============================================
External function binding with type params
===============================================

export external length = [=[array_length]=] : <T>(arr: &[| T |]) -> i64

-----------------------------------------------

(source_file
  (external_def
    name: (identifier)
    wasm_name: (string_literal)
    type_params: (type_params (uident))
    type: (arrow_type
      param_label: (identifier)
      param_type: (borrow_type
        inner: (array_type
          element: (type_identifier)))
      ret: (primitive_type))))

===============================================
Try / catch
===============================================

let safe = fn () -> unit do
  try
    return ()
  catch err ->
    return ()
  end
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (try_stmt
        body: (return_stmt value: (literal (unit_literal)))
        catch_param: (identifier)
        catch_body: (return_stmt value: (literal (unit_literal)))))))

===============================================
Borrow expression
===============================================

let f = fn () -> unit do
  let b = &x
  return ()
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (let_stmt
        name: (identifier)
        value: (borrow_expr name: (identifier)))
      body: (return_stmt value: (literal (unit_literal))))))

===============================================
Raise expression
===============================================

let fail = fn () -> unit do
  raise [=[ error ]=]
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (expr_stmt
        (raise_expr
          value: (literal (string_literal)))))))

===============================================
Let with mutable sigil and assignment
===============================================

let counter = fn () -> unit do
  let ~count: i64 = 0
  ~count <- 42
  return ()
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (let_stmt
        sigil: (sigil)
        name: (identifier)
        type: (primitive_type)
        value: (literal (integer_literal)))
      body: (assign_stmt
        target: (variable sigil: (sigil) name: (identifier))
        value: (literal (integer_literal)))
      body: (return_stmt value: (literal (unit_literal))))))

===============================================
Generic function
===============================================

let identity = fn <T>(x: T) -> T do
  return x
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      type_params: (type_params (uident))
      params: (param_list
        (param name: (identifier) type: (type_identifier)))
      ret_type: (type_identifier)
      body: (return_stmt
        value: (variable name: (identifier))))))

===============================================
Cap definition
===============================================

cap Logger do
  fn log(msg: string) -> unit
end

-----------------------------------------------

(source_file
  (cap_def
    name: (uident)
    (fn_signature
      name: (identifier)
      params: (param_list
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type))))

===============================================
Handler expression
===============================================

let stdout_logger = handler Logger do
  fn log(msg: string) -> unit do
    return ()
  end
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (handler_expr
      cap_name: (uident)
      (handler_fn
        name: (identifier)
        params: (param_list
          (param name: (identifier) type: (primitive_type)))
        ret_type: (primitive_type)
        body: (return_stmt value: (literal (unit_literal)))))))

===============================================
Record pattern - partial match
===============================================

let get_x = fn (p: Point) -> float do
  match p do
    | { x: v, _ } ->
      return v
  end
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list
        (param name: (identifier) type: (type_identifier)))
      ret_type: (primitive_type)
      body: (match_stmt
        target: (variable name: (identifier))
        (match_case
          pattern: (record_pattern
            field_name: (identifier)
            field_pattern: (variable_pattern name: (identifier))
            wildcard: (wildcard_pattern))
          body: (return_stmt
            value: (variable name: (identifier))))))))

===============================================
List with trailing comma
===============================================

let nums = fn () -> [i64] do
  return [1, 2, 3,]
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (list_type element: (primitive_type))
      body: (return_stmt
        value: (list_expr
          elements: (literal (integer_literal))
          elements: (literal (integer_literal))
          elements: (literal (integer_literal)))))))

===============================================
Block comment
===============================================

/* this is a block comment */
let f = fn () -> unit do
  return ()
end

-----------------------------------------------

(source_file
  (block_comment)
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (return_stmt value: (literal (unit_literal))))))

===============================================
Lambda expression
===============================================

let main = fn () -> i64 do
  let g = fn (x: i64) -> i64 do
    return x
  end
  return g(x: 1)
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (let_stmt
        name: (identifier)
        value: (lambda_expr
          params: (param_list
            (param name: (identifier) type: (primitive_type)))
          ret_type: (primitive_type)
          body: (return_stmt value: (variable name: (identifier)))))
      body: (return_stmt
        value: (call_expr
          func: (dotted_identifier (identifier))
          args: (labeled_arg
            label: (identifier)
            value: (literal (integer_literal))))))))

===============================================
New primitive types i32 f32 f64
===============================================

let f = fn (a: i32, b: f64) -> f32 do
  return a
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list
        (param name: (identifier) type: (primitive_type))
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type)
      body: (return_stmt value: (variable name: (identifier))))))

===============================================
Labeled call (no punning)
===============================================

let f = fn (x: i64) -> i64 do
  return add(x: x)
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type)
      body: (return_stmt
        value: (call_expr
          func: (dotted_identifier (identifier))
          args: (labeled_arg
            label: (identifier)
            value: (variable name: (identifier))))))))

===============================================
Constructor expression with labels
===============================================

let f = fn () -> unit do
  let err = PermissionDenied(msg: [=[/tmp/data]=], code: 13)
  raise err
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (let_stmt
        name: (identifier)
        value: (constructor_expr
          name: (uident)
          args: (ctor_arg
            label: (identifier)
            value: (literal (string_literal)))
          args: (ctor_arg
            label: (identifier)
            value: (literal (integer_literal)))))
      body: (expr_stmt
        (raise_expr
          value: (variable name: (identifier)))))))

===============================================
Constructor pattern with labels
===============================================

let f = fn (r: Result) -> unit do
  match r do
    | Ok(val: x) ->
      return ()
    | Err(err: e) ->
      return ()
  end
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list
        (param name: (identifier) type: (type_identifier)))
      ret_type: (primitive_type)
      body: (match_stmt
        target: (variable name: (identifier))
        (match_case
          pattern: (constructor_pattern
            name: (uident)
            (ctor_pat_arg
              label: (identifier)
              pattern: (variable_pattern name: (identifier))))
          body: (return_stmt value: (literal (unit_literal))))
        (match_case
          pattern: (constructor_pattern
            name: (uident)
            (ctor_pat_arg
              label: (identifier)
              pattern: (variable_pattern name: (identifier))))
          body: (return_stmt value: (literal (unit_literal))))))))

===============================================
Cap-qualified call
===============================================

let f = fn () -> unit require { Logger } throws { IO } do
  Logger.info(msg: [=[ hello ]=])
  return ()
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      requires: (row_type (type_identifier))
      throws: (row_type (type_identifier))
      body: (expr_stmt
        (call_expr
          func: (dotted_identifier (uident) (identifier))
          args: (labeled_arg
            label: (identifier)
            value: (literal (string_literal)))))
      body: (return_stmt value: (literal (unit_literal))))))

===============================================
Inject statement
===============================================

let main = fn () -> unit do
  let logger = handler Logger do
    fn log(msg: string) -> unit throws { Console } do
      print(val: msg)
      return ()
    end
  end
  inject logger do
    Logger.log(msg: [=[ hello ]=])
  end
  return ()
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (let_stmt
        name: (identifier)
        value: (handler_expr
          cap_name: (uident)
          (handler_fn
            name: (identifier)
            params: (param_list
              (param name: (identifier) type: (primitive_type)))
            ret_type: (primitive_type)
            throws: (row_type (type_identifier))
            body: (expr_stmt
              (call_expr
                func: (dotted_identifier (identifier))
                args: (labeled_arg
                  label: (identifier)
                  value: (variable name: (identifier)))))
            body: (return_stmt value: (literal (unit_literal))))))
      body: (inject_stmt
        handler: (inject_handler (identifier))
        body: (expr_stmt
          (call_expr
            func: (dotted_identifier (uident) (identifier))
            args: (labeled_arg
              label: (identifier)
              value: (literal (string_literal))))))
      body: (return_stmt value: (literal (unit_literal))))))

===============================================
Inject with dotted handler name
===============================================

let main = fn () -> unit do
  inject stdio.system_handler do
    print(val: [=[ hello ]=])
  end
  return ()
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (inject_stmt
        handler: (inject_handler (identifier) (identifier))
        body: (expr_stmt
          (call_expr
            func: (dotted_identifier (identifier))
            args: (labeled_arg
              label: (identifier)
              value: (literal (string_literal))))))
      body: (return_stmt value: (literal (unit_literal))))))

===============================================
Cap signature with require
===============================================

cap FileSystem do
  fn read(path: string) -> string require { Auth }
  fn write(path: string, data: string) -> unit require { Auth } throws { IO }
end

-----------------------------------------------

(source_file
  (cap_def
    name: (uident)
    (fn_signature
      name: (identifier)
      params: (param_list
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type)
      requires: (row_type (type_identifier)))
    (fn_signature
      name: (identifier)
      params: (param_list
        (param name: (identifier) type: (primitive_type))
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type)
      requires: (row_type (type_identifier))
      throws: (row_type (type_identifier)))))

===============================================
Binary expression in call arguments
===============================================

let f = fn (a: i64, b: i64) -> i64 do
  return add(a: a + 1, b: a * b + 2)
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list
        (param name: (identifier) type: (primitive_type))
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type)
      body: (return_stmt
        value: (call_expr
          func: (dotted_identifier (identifier))
          args: (labeled_arg
            label: (identifier)
            value: (binary_expr
              left: (variable name: (identifier))
              right: (literal (integer_literal))))
          args: (labeled_arg
            label: (identifier)
            value: (binary_expr
              left: (binary_expr
                left: (variable name: (identifier))
                right: (variable name: (identifier)))
              right: (literal (integer_literal)))))))))

===============================================
Chained binary expression
===============================================

let f = fn (a: i64, b: i64, c: i64) -> i64 do
  return a + b + c
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list
        (param name: (identifier) type: (primitive_type))
        (param name: (identifier) type: (primitive_type))
        (param name: (identifier) type: (primitive_type)))
      ret_type: (primitive_type)
      body: (return_stmt
        value: (binary_expr
          left: (binary_expr
            left: (variable name: (identifier))
            right: (variable name: (identifier)))
          right: (variable name: (identifier)))))))

===============================================
Import with uppercase items (ports, types)
===============================================

import { Fs, Handle }, * as fs from "std:filesystem"

-----------------------------------------------

(source_file
  (import_def
    items: (import_item
      name: (uident))
    items: (import_item
      name: (uident))
    alias: (identifier)
    path: (import_path (string_literal))))

===============================================
Cap with linear params and record return
===============================================

export cap Fs do
  fn open_read(path: string) -> %Handle throws { Exn }
  fn read(handle: %Handle) -> { content: string, handle: %Handle }
  fn close(handle: %Handle) -> unit
end

-----------------------------------------------

(source_file
  (cap_def
    name: (uident)
    (fn_signature
      name: (identifier)
      params: (param_list
        (param name: (identifier) type: (primitive_type)))
      ret_type: (linear_type inner: (type_identifier))
      throws: (row_type (type_identifier)))
    (fn_signature
      name: (identifier)
      params: (param_list
        (param name: (identifier) type: (linear_type inner: (type_identifier))))
      ret_type: (record_type
        (record_type_field name: (identifier) type: (primitive_type))
        (record_type_field name: (identifier) type: (linear_type inner: (type_identifier)))))
    (fn_signature
      name: (identifier)
      params: (param_list
        (param name: (identifier) type: (linear_type inner: (type_identifier))))
      ret_type: (primitive_type))))

===============================================
Consume-and-return match pattern
===============================================

let f = fn () -> unit do
  let %r = Fs.read(handle: %h)
  match %r do | { content: c, handle: %h2 } ->
    Fs.close(handle: %h2)
    return ()
  end
end

-----------------------------------------------

(source_file
  (let_def
    name: (identifier)
    value: (lambda_expr
      params: (param_list)
      ret_type: (primitive_type)
      body: (let_stmt
        sigil: (sigil)
        name: (identifier)
        value: (call_expr
          func: (dotted_identifier (uident) (identifier))
          args: (labeled_arg
            label: (identifier)
            value: (variable sigil: (sigil) name: (identifier)))))
      body: (match_stmt
        target: (variable sigil: (sigil) name: (identifier))
        (match_case
          pattern: (record_pattern
            field_name: (identifier)
            field_pattern: (variable_pattern name: (identifier))
            field_name: (identifier)
            field_pattern: (variable_pattern sigil: (sigil) name: (identifier)))
          body: (expr_stmt
            (call_expr
              func: (dotted_identifier (uident) (identifier))
              args: (labeled_arg
                label: (identifier)
                value: (variable sigil: (sigil) name: (identifier)))))
          body: (return_stmt value: (literal (unit_literal))))))))

===============================================
While loop
===============================================

let f = fn () -> unit do
  let ~i: i64 = 0
  while ~i < 10 do
    ~i <- ~i + 1
  end
  return ()
end

-----------------------------------------------
